# docu-query

./: .gitignore  CONTRIBUTING.md  DOCKER.md  LICENSE  MANIFEST.in  PACKAGE_SUMMARY.md  README.md  docker-build.sh  docker-compose.yml  package-lock.json  package.json  pyproject.toml  render.yaml  vercel.json
.github/workflows/: ci.yml  publish.yml
backend/: Dockerfile  Procfile  UPDATE.md  add_test_doc.py  check_db.py  debug_chroma.py  main.py  rag_core.py  rag_core.py.bak  requirements.txt  response_generator.py  run.py  test_document_indexing.py  test_imports.py  test_upload.html
backend/app/: main.py
backend/app/core/: config.py  database.py  database_migration.py  database_seed.py  security.py
backend/app/models/: db_models.py  pydantic_models.py  user.py
backend/app/routers/: auth.py  chat.py  files.py  health.py  queries.py  users.py
backend/app/services/: data_handler.py  file_parser.py  file_service.py  google_auth_service.py  nlp_service.py  query_engine.py  user_service.py  vector_store.py
backend/docs/: system_prompt.md
backend/scripts/: setup.py  verify.py
docs/: system_prompt.md
frontend/: Dockerfile  GOOGLE_SIGNIN_SETUP.md  index.html  middleware.ts  next.config.js  nginx.conf  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
frontend/app/: layout.tsx  middleware.ts  page.tsx  theme-provider.tsx  types.d.ts
frontend/app/components/: AppLayout.tsx  ChatInterface.tsx  FileList.tsx  FileSelector.tsx  FileUploader.tsx  GoogleSignInButton.tsx
frontend/app/components/ui/: border-beam.tsx
frontend/app/lib/: api.ts  auth-context.tsx  contexts.tsx  debug.ts  fetch-with-auth.ts  google-debug.ts
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/app/styles/: globals.css
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: ChatWindow.jsx  DocumentManager.jsx  FileDrop.jsx
src/: pytest_asyncio.py
src/docuquery_ai/: __init__.py  client.py
src/docuquery_ai/cli/: __init__.py  main.py
src/docuquery_ai/core/: __init__.py  config.py  database.py  database_migration.py  database_seed.py  security.py
src/docuquery_ai/db/: graph.py  knowledge_graph.py  manager.py  models.py  relational.py  vector.py
src/docuquery_ai/exceptions/: __init__.py
src/docuquery_ai/ingestion/: embedding.py  ner.py  parser.py  pipeline.py
src/docuquery_ai/models/: __init__.py  db_models.py  pydantic_models.py  user.py
src/docuquery_ai/query/: aggregator.py  cache.py  engine.py  graph_builder.py  kg_builder.py  relational_builder.py  vector_builder.py
src/docuquery_ai/rag/: context.py  generator.py  processor.py  retriever.py
src/docuquery_ai/services/: __init__.py  data_handler.py  file_parser.py  file_service.py  google_auth_service.py  graph_service.py  nlp_service.py  query_engine.py  user_service.py  vector_store.py
src/pydantic/: __init__.py
src/pydantic_settings/: __init__.py
tests/: __init__.py  test_client.py  test_db.py  test_import.py  test_ingestion.py  test_query.py  test_rag.py
venv311/: pyvenv.cfg
